CZW/RB: This is Latiss specific.

--- a/pipelines/VerifyBias.yaml
+++ b/pipelines/VerifyBias.yaml
@@ -5,6 +5,7 @@ tasks:
     config:
       connections.ccdExposure: 'raw'
       connections.outputExposure: 'verifyBiasProc'
+      overscan.fitType: 'MEDIAN_PER_ROW'
       doBias: true
       doVariance: true
       doLinearize: false
