--- a/doc/manifest.yaml
+++ b/doc/manifest.yaml
@@ -1,2 +1,10 @@
+# Documentation manifest.
+
+# Name of this package
+# Also the name of the package documentation subdirectory.
+# package: "cp_pipe"
+
+# List of names of Python modules in this package.
+# For each module there is a corresponding module doc subdirectory.
 modules:
   - "lsst.cp.verify"
