Initial catalog support.

--- a/pipelines/VerifyBfk.yaml
+++ b/pipelines/VerifyBfk.yaml
@@ -6,26 +6,31 @@ tasks:
       connections.ccdExposure: 'raw'
       connections.outputExposure: 'verifyBfkIsr'
   verifyBfkChar:
-    class: lsst.pipe.tasks.CharacterizeImageTask
+    class: lsst.pipe.tasks.characterizeImage.CharacterizeImageTask
     config:
       connections.exposure: 'verifyBfkIsr'
   verifyBfkCal:
     class: lsst.pipe.tasks.calibrate.CalibrateTask
     config:
+      connections.astromRefCat: 'ps1_pv3_3pi_20170110'
+      connections.photoRefCat: 'ps1_pv3_3pi_20170110'
+      connections.outputExposure: 'verifyBfkProc'
       connections.outputCat: 'verifyBfkCatalog'
-  verifyBfkChip:
-    class: lsst.cp.verify.CpVerifyBfkTask
-    config:
-      connections.inputExp: 'verifyBfkProc'
-      connections.inputCatalog: 'verifyBfkCatalog'
-      connections.outputStats: 'verifyBfkDetStats'
-  verifyBfkExp:
-    class: lsst.cp.verify.CpVerifyExpMergeTask
-    config:
-      connections.inputStats: 'verifyBfkDetStats'
-      connections.outputStats: 'verifyBfkExpStats'
-  verifyBfk:
-    class: lsst.cp.verify.CpVerifyRunMergeTask
-    config:
-      connections.inputStats: 'verifyBfkExpStats'
-      connections.outputStats: 'verifyBfkStats'
+      astromRefObjLoader.ref_dataset_name: 'ps1_pv3_3pi_20170110'
+      photoRefObjLoader.ref_dataset_name: 'ps1_pv3_3pi_20170110'
+  # verifyBfkChip:
+  #   class: lsst.cp.verify.verifyBfk.CpVerifyBfkTask
+  #   config:
+  #     connections.inputExp: 'verifyBfkProc'
+  #     connections.inputCatalog: 'verifyBfkCatalog'
+  #     connections.outputStats: 'verifyBfkDetStats'
+  # verifyBfkExp:
+  #   class: lsst.cp.verify.CpVerifyExpMergeTask
+  #   config:
+  #     connections.inputStats: 'verifyBfkDetStats'
+  #     connections.outputStats: 'verifyBfkExpStats'
+  # verifyBfk:
+  #   class: lsst.cp.verify.CpVerifyRunMergeTask
+  #   config:
+  #     connections.inputStats: 'verifyBfkExpStats'
+  #     connections.outputStats: 'verifyBfkStats'
