--- a/pipelines/VerifyBfk.yaml
+++ b/pipelines/VerifyBfk.yaml
@@ -5,32 +5,27 @@ tasks:
     config:
       connections.ccdExposure: 'raw'
       connections.outputExposure: 'verifyBfkIsr'
+      connections.newBFKernel: 'bfk'
+      doBrighterFatter: true
   verifyBfkChar:
     class: lsst.pipe.tasks.characterizeImage.CharacterizeImageTask
     config:
       connections.exposure: 'verifyBfkIsr'
-  verifyBfkCal:
-    class: lsst.pipe.tasks.calibrate.CalibrateTask
+      doApCorr: false
+      doDeblend: false
+  verifyBfkChip:
+    class: lsst.cp.verify.verifyBfk.CpVerifyBfkTask
     config:
-      connections.astromRefCat: 'ps1_pv3_3pi_20170110'
-      connections.photoRefCat: 'ps1_pv3_3pi_20170110'
-      connections.outputExposure: 'verifyBfkProc'
-      connections.outputCat: 'verifyBfkCatalog'
-      astromRefObjLoader.ref_dataset_name: 'ps1_pv3_3pi_20170110'
-      photoRefObjLoader.ref_dataset_name: 'ps1_pv3_3pi_20170110'
-  # verifyBfkChip:
-  #   class: lsst.cp.verify.verifyBfk.CpVerifyBfkTask
-  #   config:
-  #     connections.inputExp: 'verifyBfkProc'
-  #     connections.inputCatalog: 'verifyBfkCatalog'
-  #     connections.outputStats: 'verifyBfkDetStats'
-  # verifyBfkExp:
-  #   class: lsst.cp.verify.CpVerifyExpMergeTask
-  #   config:
-  #     connections.inputStats: 'verifyBfkDetStats'
-  #     connections.outputStats: 'verifyBfkExpStats'
-  # verifyBfk:
-  #   class: lsst.cp.verify.CpVerifyRunMergeTask
-  #   config:
-  #     connections.inputStats: 'verifyBfkExpStats'
-  #     connections.outputStats: 'verifyBfkStats'
+      connections.inputExp: 'icExp'
+      connections.inputCatalog: 'icSrc'
+      connections.outputStats: 'verifyBfkDetStats'
+  verifyBfkExp:
+    class: lsst.cp.verify.CpVerifyVisitExpMergeTask
+    config:
+      connections.inputStats: 'verifyBfkDetStats'
+      connections.outputStats: 'verifyBfkExpStats'
+  verifyBfk:
+    class: lsst.cp.verify.CpVerifyVisitRunMergeTask
+    config:
+      connections.inputStats: 'verifyBfkExpStats'
+      connections.outputStats: 'verifyBfkStats'
