--- a/pipelines/VerifyDark.yaml
+++ b/pipelines/VerifyDark.yaml
@@ -15,6 +15,7 @@ tasks:
     class: lsst.cp.verify.CpVerifyDarkTask
     config:
       connections.inputExp: 'verifyDarkProc'
+      connections.taskMetadata: 'verifyDarkApply_metadata'
       connections.outputStats: 'verifyDarkDetStats'
   verifyDarkExp:
     class: lsst.cp.verify.CpVerifyExpMergeTask
