Fix pipeline to retrieve ptc dataset

--- a/pipelines/VerifyPtc.yaml
+++ b/pipelines/VerifyPtc.yaml
@@ -3,7 +3,7 @@ tasks:
   verifyPtcCalib:
     class: lsst.cp.verify.verifyPtc.CpVerifyPtcTask
     config:
-      connections.inputCalib: 'verifyPtc'
+      connections.inputCalib: 'ptc'
       connections.outputStats: 'verifyPtcDetStats'
   verifyPtc:
     class: lsst.cp.verify.CpVerifyCalibMergeTask
