--- a/pipelines/LsstCam/VerifyLinearity.yaml
+++ b/pipelines/LsstCam/VerifyLinearity.yaml
@@ -19,7 +19,7 @@ tasks:
       connections.inputCovariances: 'verifyLinearityPtcExtract'
       connections.outputPtcDataset: 'verifyLinearityPtc'
       ptcFitType: EXPAPPROXIMATION
-   verifyLinearityUncorrectedSecondLinearizer:
+  verifyLinearityUncorrectedSecondLinearizer:
      class: lsst.cp.pipe.LinearitySolveTask
      config:
       connections.inputPtc: 'verifyLinearityPtc'
@@ -31,13 +31,13 @@ tasks:
   verifyLinearityPhotodiodeCorrection:
     class: lsst.cp.pipe.PhotodiodeCorrectionTask
     config:
-      connections.inputPtc: 'verifyLinearity'
+      connections.inputPtc: 'verifyLinearityPtc'
       connections.inputLinearizer: 'verifyLinearityUnCorrectedLinearizer'
       connections.outputPhotodiodeCorrection: 'verifyLinearityPdCorrection'
   verifyLinearityCorrectedSecondLinearizer:
     class: lsst.cp.pipe.LinearitySolveTask
     config:
-      connections.inputPtc: 'verifyLibearityPtc'
+      connections.inputPtc: 'verifyLinearityPtc'
       connections.inputPhotodiodeCorrection: 'verifyLinearityPdCorrection'
       connections.outputLinearizer: 'verifyLinearitySecondLinearizer'
       linearityType: Spline
