--- a/pipelines/_ingredients/VerifyDefect2.yaml
+++ b/pipelines/_ingredients/VerifyDefect2.yaml
@@ -31,7 +31,7 @@ tasks:
       doApCorr: false
       doDeblend: false
   verifyDefectChip:
-    class: lsst.cp.verify.verifyDefects.CpVerifyDefectTask
+    class: lsst.cp.verify.verifyDefects.CpVerifyDefectsTask
     config:
       connections.inputExp: 'icExp'
       connections.inputCatalog: 'icSrc'
