--- a/pipelines/_ingredients/VerifyDark.yaml
+++ b/pipelines/_ingredients/VerifyDark.yaml
@@ -13,6 +13,9 @@ tasks:
       doFringe: false
       doCalculateStatistics: true
       isrStats.doCopyCalibDistributionStatistics: true
+      doBinnedExposures: true
+      binFactor1: 8
+      binFactor2: 64
   verifyDarkChip:
     class: lsst.cp.verify.CpVerifyDarkTask
     config:
@@ -39,3 +42,18 @@ tasks:
       connections.outputResults: 'verifyDarkResults'
       hasInputResults: true
       hasMatrixCatalog: false
+  mosaicExp1:
+    class: lsst.pipe.tasks.visualizeVisit.VisualizeMosaicExpTask
+    config:
+      connections.inputExp: 'postIsrBin1'
+      connections.outputExp: 'verifyDarkMosaic1'
+      binning: 8
+  mosaicExp2:
+    class: lsst.pipe.tasks.visualizeVisit.VisualizeMosaicExpTask
+    config:
+      connections.inputExp: 'postIsrBin2'
+      connections.outputExp: 'verifyDarkMosaic2'
+      binning: 64
+contracts:
+  - verifyDarkApply.binFactor1 == mosaicExp1.binning
+  - verifyDarkApply.binFactor2 == mosaicExp2.binning
