--- a/pipelines/_ingredients/VerifyDark.yaml
+++ b/pipelines/_ingredients/VerifyDark.yaml
@@ -45,14 +45,14 @@ tasks:
   mosaicExp1:
     class: lsst.pipe.tasks.visualizeVisit.VisualizeMosaicExpTask
     config:
-      connections.inputExp: 'postIsrBin1'
-      connections.outputExp: 'verifyDarkMosaic1'
+      connections.inputExps: 'postIsrBin1'
+      connections.outputData: 'verifyDarkMosaic1'
       binning: 8
   mosaicExp2:
     class: lsst.pipe.tasks.visualizeVisit.VisualizeMosaicExpTask
     config:
-      connections.inputExp: 'postIsrBin2'
-      connections.outputExp: 'verifyDarkMosaic2'
+      connections.inputExps: 'postIsrBin2'
+      connections.outputData: 'verifyDarkMosaic2'
       binning: 64
 contracts:
   - verifyDarkApply.binFactor1 == mosaicExp1.binning
