Make repack labels unique.

--- a/pipelines/_ingredients/VerifyBias.yaml
+++ b/pipelines/_ingredients/VerifyBias.yaml
@@ -42,7 +42,7 @@ tasks:
     config:
       connections.inputStats: 'verifyBiasExpStats'
       connections.outputStats: 'verifyBiasStats'
-  repackResults:
+  repackBiasResults:
     class: lsst.cp.verify.CpVerifyRepackBiasTask
     config:
       connections.detectorStats: 'verifyBiasDetStats'
