--- a/pipelines/_ingredients/VerifyFlat.yaml
+++ b/pipelines/_ingredients/VerifyFlat.yaml
@@ -26,7 +26,7 @@ tasks:
     config:
       connections.inputStats: 'verifyFlatExpStats'
       connections.outputStats: 'verifyFlatStats'
-  repackResults:
+  repackFlatResults:
     class: lsst.cp.verify.CpVerifyRepackFlatTask
     config:
       connections.detectorStats: 'verifyFlatDetStats'
