Add matrix catalog handling.
* Update returns to use Struct.
* Add second output product.
* Tidy dimension lists.

--- a/pipelines/_ingredients/VerifyBias.yaml
+++ b/pipelines/_ingredients/VerifyBias.yaml
@@ -49,3 +49,5 @@ tasks:
       connections.exposureStats: 'verifyBiasExpStats'
       connections.runStats: 'verifyBiasStats'
       connections.outputCatalog: 'verifyBiasResults'
+      connections.matrixCatalog: 'verifyBiasCorrelations'
+      hasMatrixCatalog: true
