--- a/pipelines/_ingredients/VerifyPtc.yaml
+++ b/pipelines/_ingredients/VerifyPtc.yaml
@@ -13,5 +13,5 @@ tasks:
       connections.inputResults: 'verifyPtcDetResults'
       connections.outputStats: 'verifyPtcStats'
       connections.outputResults: 'verifyPtcResults'
-      thisDimension: 'detector'
+      mergeDimension: 'detector'
       hasInputResults: true
